--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ anyhow = "1.0.66"
 clap = { version = "4.0.29", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.17"
+owo-colors = "3.5.0"
